Extend CSV output with realized summary and sale trade tables